<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="zero">0</string>
    <string name="dec">.</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="div">/</string>
    <string name="neg">-/+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>

</resources>